# gtk_opengl_graph

./: CMakeLists.txt  README.md
src/: graph.c  graph.h  main.c  ui.c  ui.h
